--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-Do list</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/2121ef6496.js" crossorigin="anonymous"></script>
     <style>
